audit cleanup
